Fri Apr 21 07:38:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/IFRService/IFR_BaseS.cpp:
        * orbsvcs/orbsvcs/IFRService/IFR_BasicS.cpp:
        * orbsvcs/orbsvcs/IFRService/IFR_ComponentsS.cpp:
        * orbsvcs/orbsvcs/IFRService/IFR_ExtendedS.cpp:
        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Connector.cpp:
        * orbsvcs/orbsvcs/FaultTolerance/FT_ClientPolicy_i.inl:
        * orbsvcs/orbsvcs/Notify/ETCL_Filter.h:
        * orbsvcs/orbsvcs/Notify/EventTypeSeq.cpp:
        * examples/Kokyu_dsrt_schedulers/FP_Scheduler.cpp:
        * examples/Kokyu_dsrt_schedulers/MIF_Scheduler.cpp:
        * examples/Kokyu_dsrt_schedulers/MUF_Scheduler.cpp:
        * tests/Smart_Proxies/Collocation/Smart_Proxy_Impl.cpp:
          Removed usage of ACE_NESTED_CLASS

Thu Apr 20 14:41:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/extra_core.mpb:
        * tao/tao.mpc:
          Moved ServicesC.cpp to tao.mpc

Thu Apr 20 14:24:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Bounded_Sequence_CDR_T.h:
        * tao/Unbounded_Sequence_CDR_T.h:
          Include orbconf.h instead of one of the sequence header files

Thu Apr 20 13:37:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Asynch_Reply_Dispatcher_Base.{h,cpp}:
        * tao/ObjectKey_Table.cpp:
        * tao/Refcounted_ObjectKey.{h,cpp,inl}:
          Made the refcounts CORBA::ULong and only return the refcount
          from the incr/decr methods when really needed, using the refcount
          form external is always tricky. Fixes bugzilla bug 2505.

Thu Apr 20 12:28:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        Integrated ondemand branch to cvs head. This makes an ondemand write
        possible. The user specified maximum is at this moment not a hard
        maximum, it is more an indication how large the GIOP fragments
        should become, we can send out smaller and larger fragments if needed.
