@@ -19,8 +19,8 @@
 //
 // ============================================================================
 
-ACE_RCSID (be_visitor_interface, 
-           cdr_op_ch, 
+ACE_RCSID (be_visitor_interface,
+           cdr_op_ch,
            "$Id$")
 
 // ***************************************************************************
@@ -42,7 +42,7 @@ int
 be_visitor_interface_cdr_op_ch::visit_interface (be_interface *node)
 {
   // No CDR operations for locality constraint interfaces.
-  if (node->cli_hdr_cdr_op_gen () 
+  if (node->cli_hdr_cdr_op_gen ()
       || node->imported ()
       || node->is_local ())
     {
@@ -52,7 +52,7 @@ be_visitor_interface_cdr_op_ch::visit_interface (be_interface *node)
   TAO_OutStream *os = this->ctx_->stream ();
 
   *os << be_nl << be_nl << "// TAO_IDL - Generated from" << be_nl
-      << "// " << __FILE__ << ":" << __LINE__ << be_nl << be_nl;
+      << "// " << __FILE__ << ":" << __LINE__ << be_nl;
 
   *os << be_global->core_versioning_begin () << be_nl;
 
@@ -62,7 +62,7 @@ be_visitor_interface_cdr_op_ch::visit_interface (be_interface *node)
       << "_ptr );" << be_nl;
   *os << be_global->stub_export_macro () << " ::CORBA::Boolean "
       << "operator>> (TAO_InputCDR &, "
-      << node->full_name () << "_ptr &);";
+      << node->full_name () << "_ptr &);" << be_nl;
 
   *os << be_global->core_versioning_end () << be_nl;
 
@@ -74,7 +74,7 @@ be_visitor_interface_cdr_op_ch::visit_interface (be_interface *node)
       ACE_ERROR_RETURN ((LM_ERROR,
                          "(%N:%l) be_visitor_interface_cdr_op_ch::"
                          "visit_interface - "
-                         "codegen for scope failed\n"), 
+                         "codegen for scope failed\n"),
                         -1);
     }
 
