@@ -1,12 +1,14 @@
 // $Id$
 
+#include <orb.idl>
+
 module TAO_Trader_Test
 {
-  
+
 interface Remote_Output
 {
   void confirm ();
-  // Ensure that the object reference returned from the query actually 
+  // Ensure that the object reference returned from the query actually
   // works.
 };
 
@@ -26,15 +28,15 @@ interface PostScript_Printer : Remote_Output
 {
 };
 
-// Sequences used to test sequence type equivalence in the trader. 
-typedef sequence<short> ShortSeq;
-typedef sequence<unsigned short> UShortSeq;
-typedef sequence<long> LongSeq;
-typedef sequence<unsigned long> ULongSeq;
-typedef sequence<boolean> BooleanSeq;
-typedef sequence<float> FloatSeq;
-typedef sequence<double> DoubleSeq;
-typedef sequence<string> StringSeq;
+// Sequences used to test sequence type equivalence in the trader.
+typedef CORBA::ShortSeq ShortSeq;
+typedef CORBA::UShortSeq UShortSeq;
+typedef CORBA::LongSeq LongSeq;
+typedef CORBA::ULongSeq ULongSeq;
+typedef CORBA::BooleanSeq BooleanSeq;
+typedef CORBA::FloatSeq FloatSeq;
+typedef CORBA::DoubleSeq DoubleSeq;
+typedef CORBA::StringSeq StringSeq;
 
 };
 
