@@ -1,3 +1,8 @@
+Fri Apr 21 08:11:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * orbsvcs/tests/Trading/TTest.idl:
+          Use the CORBA predefined sequence types
+
 Fri Apr 21 07:38:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * orbsvcs/orbsvcs/IFRService/IFR_BaseS.cpp:
